clusters/homelab/apps/media/jellyfin/oauth2-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: jellyfin
spec:
  selector:
    app: oauth2-proxy
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4180
